--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- Added title -->
     <title>Horiseon Social Solutions Services</title>
 </head>
 
 <body>
     <header >
         <h1>Horiseon</h1>
+        <!-- Renamed div tag  -->
         <nav>
             <ul>
+                <!-- Added alt atributes to images -->
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -24,12 +27,13 @@
             </ul>
         </nav>
     </header> 
-
+    <!-- Renamed div tag  -->  
     <section >
         <img src= "./assets/images/digital-marketing-meeting.jpg" id="hero" alt= "people in a meeting"/>
     </section>
-
+    <!-- Renamed div tag  -->
     <section id="content">
+        <!-- Changed class name -->
         <div class="content-soc">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt=" table with notebook indicating search engine optimization elements" />
             <h2>Search Engine Optimization</h2>
@@ -37,6 +41,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+        <!-- Changed class name -->
         <div class="content-soc">
             <img src="./assets/images/online-reputation-management.jpg" id="float-right" alt="laptop with word reputation" />
             <h2>Online Reputation Management</h2>
@@ -44,6 +49,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+        <!-- Changed class name -->
         <div class="content-soc">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media table with words tweet, like and share" />
             <h2>Social Media Marketing</h2>
@@ -52,8 +58,9 @@
             </p>
         </div>
     </section>
-
+    <!-- Renamed div tag  -->
     <section id="benefits">
+        <!-- Changed class name -->
         <div class="benefit-lbc">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Funnel representing lead generation brings customer" />
@@ -61,6 +68,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+        <!-- Changed class name -->
         <div class="benefit-lbc">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Bulb representing brand-awareness" />
@@ -68,6 +76,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+        <!-- Changed class name -->
         <div class="benefit-lbc">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Gear representing cost Management" />
@@ -76,7 +85,7 @@
             </p>
         </div>
     </section>
-
+    <!-- Renamed div tag  -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
